name:                zetty
version:             0.1.0.0
synopsis:            A simple theorem proving language powered by z3.
description:         Please see README.md
homepage:            https://github.com/zetty-z3/zetty
license:             BSD3
license-file:        LICENSE
author:              Michael Gale<mbg28@cam.ac.uk>, Will Shackleton<w.shackleton@gmail.com>
maintainer:          w.shackleton@gmail.com
copyright:           2016 Zetty project
category:            Theorem Provers
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       Lib.SmtLang.Base, Lib.SmtLang.Smt
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable zetty-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , zetty
  default-language:    Haskell2010

test-suite zetty-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , zetty
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zetty-z3/zetty
